--- a/app/package.json
+++ b/app/package.json
@@ -38,7 +38,9 @@
     "sass": "^1.32.12"
   },
   "devDependencies": {
+    "@loadable/component": "^5.15.2",
     "@maferland/spotify-react": "^0.3.0",
+    "hover-effect": "^1.1.0",
     "html-to-react": "^1.4.7"
   }
 }
