--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"build": "gatsby build",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean",
-		"deploy": "gatsby build --prefix-paths && gh-pages -d public"
+		"deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public"
 	},
 	"dependencies": {
 		"chart.js": "^3.6.0",
