--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
 		"deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public"
 	},
 	"dependencies": {
+		"@codersrank/skills-chart": "^0.9.21",
 		"chart.js": "^3.6.0",
+		"extract-colors": "^1.1.21",
 		"gatsby": "^3.4.1",
+		"gatsby-admin": "^0.24.4",
+		"gatsby-plugin-extract-image-colors": "^0.0.14",
 		"gatsby-plugin-image": "^1.4.0",
 		"gatsby-plugin-manifest": "^3.4.0",
 		"gatsby-plugin-react-helmet": "^4.4.0",
@@ -35,6 +39,7 @@
 		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0",
 		"react-inview-monitor": "^2.3.0",
+		"react-lazy-media": "^0.3.1",
 		"react-spotify-player": "^1.0.4",
 		"sass": "^1.32.12"
 	},
