--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"build": "gatsby build",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean",
-		"deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public"
+		"deploy": "gatsby clean && gatsby build --prefix-paths && cp ./src/CNAME public/ && gh-pages -d public"
 	},
 	"dependencies": {
 		"@codersrank/skills-chart": "^0.9.21",
